# UNFOLD

./: .gitignore  KAGGLE_QUICKSTART.md  README.md  kaggle_notebook.py  kaggle_sanity_check.py  kaggle_setup.py  kaggle_setup.sh  pyproject.toml  requirements.txt  test_dataset.py  test_decoder.py  test_encoder.py  test_imports.py  test_kcd_model.py  test_pretrained_encoder.py  test_slot_attention.py  train_demo.py  train_example.py  train_kaggle.py  train_kaggle_small.py  visualize_after_epoch1.py
.claude/: settings.local.json
configs/: model.yaml  model_demo.yaml  model_pretrained.yaml  train.yaml  training.yaml  training_demo.yaml
scripts/: eval.sh  train.sh
src/: __init__.py
src/kcd/: __init__.py  eval.py  losses.py  train.py  utils.py
src/kcd/data/: __init__.py  datasets.py
src/kcd/models/: __init__.py  decoder.py  encoder.py  kcd_model.py  slot_attention.py
